fix bug with activating search field on narrow view

--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -98,7 +98,11 @@ footer.main-footer {
 
 // Media Queries
 
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
+
+	.search-container {
+		display: none;
+	}
 
 
 /* ====================
